--- a/ss07_website_layout_design/exercise/exercise_7_3/exercise_7_3.html
+++ b/ss07_website_layout_design/exercise/exercise_7_3/exercise_7_3.html
@@ -2,83 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tạo layout với RWD</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="exercise_7_3.css">
 </head>
 <body>
-<div id="header">
-    <div id="header-logo">
-        Logo
+    <div class="header">
+        <div class="col-1 col-m-2 logo">
+            Logo
+        </div>
+        <div class="col-4 col-m-8 menu">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Project</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="col-7 col-m-2 login">
+            <a href="#"><i class="fa-solid fa-right-to-bracket"></i>Login</a>
+        </div>
     </div>
 
-    <div id="header-link">
-        <ul>
-            <li><a href="#">Home</a>
-                <ul>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                </ul>
-            </li>
-            <li><a href="#">About</a>
-                <ul>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Project</a>
-                <ul>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Contact</a>
-                <ul>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                </ul>
-            </li>
-        </ul>
-
+    <div class="body row">
+        <div class="col-2 col-m-2 left">
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+        </div>
+        <div class="col-8 col-m-8 content">
+            <h2>Welcome</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores laborum
+                maiores nulla placeat quae quasi voluptas! Ab adipisci aperiam aspernatur
+                beatae, culpa deserunt distinctio eligendi enim eum in iusto laudantium
+                libero maxime molestias neque nostrum odio placeat ratione repellat sint
+                suscipit tempora totam ut voluptatem voluptatibus? Esse facilis nulla soluta?
+            </p>
+            <hr>
+            <h3>Test</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam
+                architecto asperiores dolor, dolorem dolorum id in ipsum labore neque odit
+                officiis qui reiciendis repellendus, sed sint ut voluptatibus voluptatum.
+            </p>
+        </div>
+        <div class="col-2 col-m-2 right">
+            <button type="button">ADS</button>
+            <button type="button">ADS</button>
+        </div>
     </div>
 
-    <div id="header-login">
-        <a href="#">Login</a>
+    <div class="footer">
+        Footer
     </div>
-</div>
 
-<div id="main">
-    <div id="left">
-        <span><a href="#">Link</a> </span><br>
-        <span><a href="#">Link</a> </span><br>
-        <span><a href="#">Link</a> </span><br>
-    </div>
-    <div id="content">
-        <h1>Welcome</h1>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
-        </p>
-        <hr>
-        <h3>Test</h3>
-        <p>Lorem ipsum...</p>
-    </div>
-    <div id="right">
-        <div><button type="button">ADS</button></div>
-        <div><button type="button">ADS</button></div>
-    </div>
-</div>
-
-<div id="footer">
-    <p>Footer Text</p>
-</div>
 </body>
 </html>
