Nhat submit exercise ss08

--- a/ss08_bootstrap/exercise_8_2/exercise_8_2.html
+++ b/ss08_bootstrap/exercise_8_2/exercise_8_2.html
@@ -8,13 +8,14 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous">
     <link rel="stylesheet" href="exercise_8_2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
     <div id="header">
         <nav class="navbar navbar-expand-lg p-0">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="https://www.microsoft.com/vi-vn/">
-                    <img src="img/logo-microsoft.png" height="23" width="108"/>
+                    <img src="img/png/logo-microsoft.png" height="23" width="108"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -25,10 +26,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <span style="font-size: 30px;height: 50px;line-height: 42px">|</span>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active fs-6" aria-current="page" href="#">Surface</a>
+                            <a class="nav-link active fs-6" aria-current="page" href="#">
+                                <span style="font-size: 30px;height: 50px; line-height: 15px">|</span>
+                                Surface</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -81,19 +81,199 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://support.microsoft.com/vi-vn/surface">Support</a>
                         </li>
-                        <li class="shop-deal">
-                            <a class="btn btn-primary"
+                        <li class="nav-item" style="padding-left: 10px; line-height: 50px">
+                            <a class="btn-shop-deals"
                                href="https://www.microsoft.com/en-us/store/b/surface-deals"
-                               role="button">SHOP DEAL</a>
+                               role="button">SHOP DEALS</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 250px">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                All Microsoft
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Search
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.microsoft.com/en-us/store/cart">
+                                Cart<i class="fa-solid fa-cart-shopping"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://login.live.com/login.srf?wa=wsignin1.0&rpsnv=16&ct=1692936814&rver=7.3.6960.0&wp=MBI_SSL&wreply=https%3a%2f%2fwww.microsoft.com%2frpsauth%2fv2%2faccount%2fmsa%2fsignincallback%3fstate%3deyJSdSI6Imh0dHBzOi8vd3d3Lm1pY3Jvc29mdC5jb20vZW4tdXMvc3VyZmFjZSIsIkxjIjoiMTAzMyIsIkhvc3QiOiJ3d3cubWljcm9zb2Z0LmNvbSJ9&lc=1033&id=74335&aadredir=1">
+                                Sign in&nbsp;<i class="fa-solid fa-user"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
+    </div>
+    <div>
+        <p style="height: 40px;background: #f2f2f2; margin: 0"></p>
+    </div>
+    <div>
+        <p style="height: 54px;background: #0067b8; margin: 0;text-align: center; line-height: 54px">
+            <b style="color: white">Save big on Surface back-to-school deals. Shop deals</b>
+        </p>
+    </div>
+    <div id="main">
+        <div class="content-1 row">
+            <div class="col-lg-5 col-md-12 col-sm-12 col-12 left-1">
+                <p style="font-size: 80px; font-weight: bold">
+                    Laptops designed by Microsoft
+                </p>
+                <p style="font-size: 25px; font-weight: bold">
+                    Save on back-to-school essentials now.
+                    <br>Portability, power, flexibility,
+                    speed—whatever you’re after, there’s a Surface to match.
+                </p>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" target="_blank"
+                           href="https://www.microsoft.com/en-us/store/b/surface-deals">
+                            Shop deals >
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#explore-all">
+                            Explore all >
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active"
+                           href="https://www.microsoft.com/en-us/store/b/surface-deals">
+                            Surface Laptop 5 >
+                        </a>
+                    </li>
+                </ul>
+            </div>
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-12 img-1">-->
+<!--                <img src="img/png/Laptop5-hero-beat2.png" style="width: 100%"/>-->
+<!--            </div>-->
+        </div>
+        <div class="content-2">
+            <ul class="d-flex flex-wrap list-inline justify-content-left row no-gutters" style="list-style: none">
+                <li class="col-lg-2 col-md-4 col-sm-6 col-12">
+                    <img src="img/png/MSFT-Compare-devices-icon.png" height="55" width="55"/>
+                    <a href="https://www.microsoft.com/en-us/surface/devices/compare-devices">
+                        Compare devices >
+                    </a>
+                </li>
+                <li class="col-lg-2 col-md-4 col-sm-6 col-12">
+                    <img src="img/png/MSFT-Help-Me-Choose-icon.png" height="55" width="55"/>
+                    <a href="#">Help me choose ></a>
+                </li>
+                <li class="col-lg-2 col-md-4 col-sm-6 col-12">
+                    <img src="img/png/MSFT-Find-deals-icon.png" height="55" width="55"/>
+                    <a href="#">Surface deals ></a>
+                </li>
+                <li class="col-lg-2 col-md-4 col-sm-6 col-12">
+                    <img src="img/png/MSFT-Why-Surface-icon.png" height="55" width="55"/>
+                    <a href="#">Why Surface ></a>
+                </li>
+                <li class="col-lg-2 col-md-4 col-sm-6 col-12">
+                    <img src="img/png/MSFT-For-education-icon.png" height="55" width="55"/>
+                    <a href="#"> Surface for Education ></a>
+                </li>
+                <li class="col-lg-2 col-md-4 col-sm-6 col-12">
+                    <img src="img/png/MSFT-For-business-icon.png" height="55" width="55"/>
+                    <a href="#">Surface for Business ></a>
+                </li>
+            </ul>
+        </div>
+        <div style="margin-left: 100px">
+            <p style="font-size: 40px; font-weight: bold">For all the ways you create</p>
+        </div>
+        <div id="explore-all">
+            <p style="font-size: 20px; font-weight: bold">2-in-1 PCs
+                <a href="#">See all Surface 2-in-1 PCs</a>
+            </p>
+        </div >
+        <div class="content-3 row">
+            <div class="left-3 col-lg-6 col-md-12 col-sm-12 col-12">
+                <div class="left-3-image">
+                    <video src="img/MSFT_Surface_Home_Surface-Pro-9_Platinum_360-video.mp4"
+                    style="width: 100%; border-radius: 10px">
+                    </video>
+                </div>
+            </div>
+            <div class="right-3 col-lg-6 col-md-12 col-sm-12 col-12 row">
+                <div class="right-3-image-1 col-lg-6 col-md-12 col-sm-12 col-12">
+                    <div>
+                        <div class="card" style="width: 18rem;padding: 20px">
+                            <img src="img/png/MSFT-View-Surface-Pro-9-Sapphire-Surface-Type-Cover-attached.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text"><a href="#">Surface Pro 9</a></p>
+                                <p><input type="checkbox">Compare</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/png/MSFT-Surface-Pro-8-shown-three-quarter-kickstand-extended-type-cover.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text"><a href="#">Surface Pro 8</a></p>
+                                <p><input type="checkbox">Compare</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-3-image-2 col-lg-6 col-md-12 col-sm-12 col-12">
+                    <div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/png/MSFT-Surface-Pro-7-plues-three-quarter-view-kickstand-extended-type-cover.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text"><a href="#">Surface Pro 7</a></p>
+                                <p><input type="checkbox">Compare</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/png/MSFT-Surface-Go-3--three-quarter-kickstand-extended-type-cover.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text"><a href="#">Surface Go 3</a></p>
+                                <p><input type="checkbox">Compare</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <
+    <div class="content-5 row">
+        <div class="left-5 col-lg-6 col-md-12 col-sm-12 col-12">
+            <div style="padding-left: 100px">
+                <p style="font-size: 40px; font-weight: bold">All-in-one</p>
+            </div>
+            <div style="border: gray;border-radius: 5px; padding: 20px 20px 20px 100px">
+                <img src="img/png/MSFT-Surface-Studio-2-Plus-_Home_DeviceShowcase-poster.png">
+                <a href="#" style="font-size: 20px;padding-left: 30px">Surface studio 2+</a>
+            </div>
+        </div>
+        <div class="right-5 col-lg-6 col-md-12 col-sm-12 col-12">
+            <div>
+                <p style="font-size: 40px; font-weight: bold">Need help deciding?</p>
+            </div>
+            <div style="border: gray;border-radius: 5px; padding: 20px">
+                <img src="img/png/MSFT-family-image-Home-DeviceShowcase-poster-2.png">
+                <a href="#" style="font-size: 20px;padding-left: 30px">Let us help you choose a Surface</a>
+            </div>
+        </div>
     </div>
 
 
