Nhat fix exercise ss08

--- a/ss08_bootstrap/exercise_8_2/exercise_8_2.html
+++ b/ss08_bootstrap/exercise_8_2/exercise_8_2.html
@@ -130,7 +130,7 @@
     </div>
     <div id="main">
         <div class="content-1 row">
-            <div class="col-lg-5 col-md-12 col-sm-12 col-12 left-1">
+            <div class="col-lg-5 col-md-12 col-sm-12 col-12 left-1" style="position: absolute">
                 <p style="font-size: 80px; font-weight: bold">
                     Laptops designed by Microsoft
                 </p>
@@ -159,9 +159,9 @@
                     </li>
                 </ul>
             </div>
-<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-12 img-1">-->
-<!--                <img src="img/png/Laptop5-hero-beat2.png" style="width: 100%"/>-->
-<!--            </div>-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12 img-1">
+                <img src="img/png/Laptop5-hero-beat2.png" style="width: 100%"/>
+            </div>
         </div>
         <div class="content-2">
             <ul class="d-flex flex-wrap list-inline justify-content-left row no-gutters" style="list-style: none">
@@ -204,15 +204,15 @@
         <div class="content-3 row">
             <div class="left-3 col-lg-6 col-md-12 col-sm-12 col-12">
                 <div class="left-3-image">
-                    <video src="img/MSFT_Surface_Home_Surface-Pro-9_Platinum_360-video.mp4"
-                    style="width: 100%; border-radius: 10px">
+                    <video src="img/MSFT_Surface_Home_Surface-Pro-9_Platinum_360-video.mp4?rel=0&autoplay=1"
+                    style="width: 100%; border-radius: 10px" loop autoplay>
                     </video>
                 </div>
             </div>
             <div class="right-3 col-lg-6 col-md-12 col-sm-12 col-12 row">
                 <div class="right-3-image-1 col-lg-6 col-md-12 col-sm-12 col-12">
                     <div>
-                        <div class="card" style="width: 18rem;padding: 20px">
+                        <div class="card" style="width: 18rem">
                             <img src="img/png/MSFT-View-Surface-Pro-9-Sapphire-Surface-Type-Cover-attached.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <p class="card-text"><a href="#">Surface Pro 9</a></p>
@@ -254,27 +254,54 @@
         </div>
     </div>
 
-    <
     <div class="content-5 row">
-        <div class="left-5 col-lg-6 col-md-12 col-sm-12 col-12">
-            <div style="padding-left: 100px">
+        <div class="left-5 col-lg-6 col-md-12 col-sm-12 col-12" style="padding: 20px 20px 20px 100px">
+            <div>
                 <p style="font-size: 40px; font-weight: bold">All-in-one</p>
             </div>
-            <div style="border: gray;border-radius: 5px; padding: 20px 20px 20px 100px">
+            <div style="border: 1px solid gray;border-radius: 5px">
                 <img src="img/png/MSFT-Surface-Studio-2-Plus-_Home_DeviceShowcase-poster.png">
                 <a href="#" style="font-size: 20px;padding-left: 30px">Surface studio 2+</a>
             </div>
         </div>
-        <div class="right-5 col-lg-6 col-md-12 col-sm-12 col-12">
+        <div class="right-5 col-lg-6 col-md-12 col-sm-12 col-12" style="padding: 20px">
             <div>
                 <p style="font-size: 40px; font-weight: bold">Need help deciding?</p>
             </div>
-            <div style="border: gray;border-radius: 5px; padding: 20px">
+            <div style="border: 1px solid gray;border-radius: 5px">
                 <img src="img/png/MSFT-family-image-Home-DeviceShowcase-poster-2.png">
                 <a href="#" style="font-size: 20px;padding-left: 30px">Let us help you choose a Surface</a>
             </div>
         </div>
     </div>
+
+    <div style="padding: 100px">
+        <div style="width: 100%; height: 100px; text-align: center;border: 1px solid gray;border-radius: 5px">
+            <p style="font-size: 20px">
+                Save up to $400 on Surface Laptop 5
+            </p>
+            <p>
+                Study smarter with Surface Laptop 5, the beautiful Windows 11 touchscreen
+                laptop that boasts more multitasking speed and battery life for real life.
+                Now in bold, new colors. Select devices on sale now.
+            </p>
+        </div>
+    </div>
+
+    <div class="row" style="width: 100%; height: 300px; background: #bbdef1">
+        <div class="col-8" style="padding-left: 100px; padding-top: 50px">
+            <p style="font-size: 40px; font-weight: bold">
+                Introducing Windows 11 Phone Link for Surface
+            </p>
+            <p>
+                Experience the best of Windows 11 and stay connected on your Surface with Windows
+                Phone Link - available on Android and iOS.1
+            </p>
+            <a href="#" style="color: black">Get started now</a>
+        </div>
+        <div class="col-4" style="padding: 25px">
+            <img src="img/png/phone-link-windows-11_transparent_VP5-1842x1036.png" height="250" width="500"/></div>
+        </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
