--- a/ss07_website_layout_design/exercise/exercise_7_4/exercise_7_4.html
+++ b/ss07_website_layout_design/exercise/exercise_7_4/exercise_7_4.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="exercise_7_4.css">
 </head>
 <body>
-    <div id="header">
+    <div id="header" class="row">
         <img src="Logo.png" height="50" width="216"/>
     </div>
-    <div id="header-link">
+    <div id="header-link" class="row">
         <span>
             <a href="#"><b>Phim hoạt hình</b></a>
             <b>|</b>
@@ -23,27 +24,33 @@
 
     <div id="body" class="row">
         <div class="col-4 left">
-            <ul>
-                <li>
-                    <iframe src="https://www.youtube.com/embed/EGoE47R1rYM"  frameborder="0"></iframe>
-                    <p><a href="#"><b>Chào Mừng Tới Khách Sạn Nobi - </b>5,147,528 lượt xem</a></p>
-                </li>
-                <li>
-                    <iframe src="https://www.youtube.com/embed/EgZpeFSspNw"  frameborder="0"></iframe>
-                    <p><a href="#"><b>Quật Ngã Jaian, Hòn Đá Kiên Cường - </b>3,142,627 lượt xem</a></p>
-                </li>
-                <li>
-                    <iframe src="https://www.youtube.com/embed/sZplZiDOU14"  frameborder="0"></iframe>
-                    <p><a href="#"><b>Hành Tinh Ngược Đời - </b>2,175,684 lượt xem</a></p>
-                </li>
-            </ul>
+                <div>
+                    <iframe src="https://www.youtube.com/embed/EGoE47R1rYM"></iframe>
+
+                </div>
+
+                <p><a href="#"><b>Chào Mừng Tới Khách Sạn Nobi - </b>5,147,528 lượt xem</a></p>
+
+                <div>
+                    <iframe src="https://www.youtube.com/embed/EgZpeFSspNw" ></iframe>
+                </div>
+
+                <p><a href="#"><b>Quật Ngã Jaian, Hòn Đá Kiên Cường - </b>3,142,627 lượt xem</a></p>
+
+                <div>
+                    <iframe src="https://www.youtube.com/embed/sZplZiDOU14"></iframe>
+                </div>
+
+                <p><a href="#"><b>Hành Tinh Ngược Đời - </b>2,175,684 lượt xem</a></p>
         </div>
 
         <div class="col-8 right">
-            <iframe src="https://www.youtube.com/embed/EGoE47R1rYM" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+            <div>
+                <iframe src="https://www.youtube.com/embed/EGoE47R1rYM" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media;
                     gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <p><b>Hành Tinh Ngược Đời - </b>2,175,684 lượt xem</p>
+            </div>
+            <p><b>Chào Mừng Tới Khách Sạn Nobi - </b>5,147,528 lượt xem</p>
             <p>
                 Sự phát triển của internet đã giúp cho trẻ em dễ dàng tiếp cận với nhiều loại
                 thông tin khác nhau, trong đó có cả những thông tin hữu ích và nguy hại.
@@ -62,7 +69,7 @@
         </div>
     </div>
 
-    <div id="footer">
+    <div id="footer" class="row">
         <b>&copy;2017 - Thiết kế bởi NhatNK</b>
     </div>
 </body>
